--- a/gb/21/5/10/n12936201.md
+++ b/gb/21/5/10/n12936201.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ezkcme3586/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ezkcme3586/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ezkcme3586/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>BLM创始人十年前录像曝光 钟情毛语录</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12936204-149015-600x400.png" />
 <h6>最近曝光的一桢2010年的录像显示，BLM联合创始人卡洛斯是世界上杀人最多的独裁者毛泽东的粉丝。（视频截图）
@@ -11,8 +11,8 @@
 <p>卡洛斯在演讲中说，“当时我正和亚利桑那州一位与SB1017法作斗争的年轻人谈话，他拿起一本（曼恩的）书，说这就像毛泽东的红皮书。我当时想，‘伙计，这就是我的想法！’他把这两本书关联起来，真是太酷了。”</p>
 <p>她建议组织读书会，购买10～15本曼恩的书让青年阅读，“我认为我在与青年对话中扮演着非常重要的角色。也许是因为我参加这项运动已17年半，我知道将年轻人组织起来的诀窍。”</p>
 <p>卡洛斯是BLM的三位创始人之一，她最近被曝出名下有四套房产，并在洛杉矶白人区购买豪宅，被华人网友喻为“美版司马南”（司马南曾称：反美是工作，赴美是生活）。</p>
-<p>卡洛斯钟情于毛魔，并不足为奇。不过，这桢视频片段一出，在社交媒体上就吸引众多西人转发，核心关注点是毛和《<ahref="https://github.com/ezkcme3586/djy/blob/master/gb/tag/%E6%AF%9B%E8%AF%AD%E5%BD%95.md#1">毛语录</a>》。其中《国家脉动》（The National Pulse）的主编Raheem Kassam附上一图“哪个独裁者杀人最多？”，如果用一滴血代表杀100万人，那么希特勒人头下有17滴血，斯大林头下有22滴血，而毛泽东则有76滴血。</p>
-<p>根据维基百科，《<ahref="https://github.com/ezkcme3586/djy/blob/master/gb/tag/%E6%AF%9B%E8%AF%AD%E5%BD%95.md#1">毛语录</a>》由《解放军报》于1964年编辑出版，是中国文化大革命的基石。仅文革时期中国国际书店已向全世界117个国家和地区，用五十多种文字出版了五百多种版本，总印数为50亿册。以当时全世界三十多亿人口计算，全世界平均每人拥有1.67本。以至于它被称为“二十世纪世界上最流行的书”。一些组织统计认为《毛语录》是全球历史上印量仅次于《圣经》的出版物。</p>
+<p>卡洛斯钟情于毛魔，并不足为奇。不过，这桢视频片段一出，在社交媒体上就吸引众多西人转发，核心关注点是毛和《<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%AF%9B%E8%AF%AD%E5%BD%95.md#1">毛语录</a>》。其中《国家脉动》（The National Pulse）的主编Raheem Kassam附上一图“哪个独裁者杀人最多？”，如果用一滴血代表杀100万人，那么希特勒人头下有17滴血，斯大林头下有22滴血，而毛泽东则有76滴血。</p>
+<p>根据维基百科，《<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%AF%9B%E8%AF%AD%E5%BD%95.md#1">毛语录</a>》由《解放军报》于1964年编辑出版，是中国文化大革命的基石。仅文革时期中国国际书店已向全世界117个国家和地区，用五十多种文字出版了五百多种版本，总印数为50亿册。以当时全世界三十多亿人口计算，全世界平均每人拥有1.67本。以至于它被称为“二十世纪世界上最流行的书”。一些组织统计认为《毛语录》是全球历史上印量仅次于《圣经》的出版物。</p>
 <h2>黑人运动与毛思想的源渊关系</h2>
 <p>毛泽东发动文革的目的之一，是想借此向全世界输出革命，发动世界革命。美国黑人激进社团“黑豹党”就是毛的追随者。《纽约时报》2016年文章“百豹齐放：美国黑豹党为何热爱毛主席”中，描写了1966年创立黑豹党的纽顿（Huey P. Newton）把毛泽东视为偶像的事情，说当时在纽约黑人社区哈莱姆，小红书……似乎是人手一本，“这个充满争议的激进组织在鼎盛时期有成千上万的追随者。有的在与警方的枪战中阵亡。有的死于派系斗争和内部的杀戮。有的死在狱中。”</p>
 <p>大陆百度百科有关“黑豹党”的词条介绍，当时加州的一些黑豹党党员，开着车从旧金山的中国书店里一捆捆地买毛语录《小红书》，每本二十美分。再到加州大学校园里，以每本一美元的价格出售赚钱，然后买枪。“三十年后，想出这个主意的人在电视上说，毛主席教导我们说，枪杆子里面出政权。黑豹党是活学活用的样板。”</p>
@@ -29,41 +29,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/20/9/18/n12412482.md#1">“华人进步会”资助BLM创始人设立新机构</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/20/10/7/n12458941.md#1">专访程晓农：骚乱影响选民投票意向（下）</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/4/15/n12881011.md#1">BLM创始人拥四套房 内部人吁查账</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/4/15/n12881064.md#1">马克思主义成生意？BLM创始人被曝曾月收2万</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/9/18/n12412482.md#1">“华人进步会”资助BLM创始人设立新机构</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/10/7/n12458941.md#1">专访程晓农：骚乱影响选民投票意向（下）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/15/n12881011.md#1">BLM创始人拥四套房 内部人吁查账</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/4/15/n12881064.md#1">马克思主义成生意？BLM创始人被曝曾月收2万</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/25/n9992657.md#1" target="_blank">林辉：贾宝玉林黛玉扮演者曾被叫“阿飞”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977516.md#1" target="_blank">生性胆小女博士 遇世纪邪恶却勇敢说不</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/3/n12920672.md#1">目击30公分高外星人走出UFO 玻国居民惊呆</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12923553.md#1">《推背图》预言大戏尾声的丰碑事件</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12924345.md#1">【未解之谜】五台山之谜：清凉胜地的秘密</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/4/19/n12890234.md#1">日食及沙罗周期天象预言：中共生与灭</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12923727.md#1">儿子发狂与富家子败家皆有前因 结恶缘必尝恶果</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933267.md#1">【珍言真语】周小龙：国安警察恐吓流氓式执法</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933084.md#1">【财商天下】待不住了 外资巨头纷纷撤离中国</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932199.md#1">车评：2.9秒的冲击 2021 Chevrolet Corvette Stingray 2LT</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932085.md#1">【新闻看点】中共敢攻台？美一大招北京真会慌</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931918.md#1">梁朝伟拒演一部电影 成就周星驰的星爷地位</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933638.md#1">【新闻看点】习加紧造神 高官知中共内情急退党</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931918.md#1">梁朝伟拒演一部电影 成就周星驰的星爷地位</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932241.md#1">李千那父亲演出到一半晕倒 送医动5小时手术</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931731.md#1">打完疫苗24小时后发烧 赖铭伟停工返家休养</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933136.md#1">好莱坞巨星家乡开派对 粉丝羡慕澳洲防疫有成</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12930557.md#1">91岁奶奶获选模范母亲 魏如萱新歌当贺礼</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/6/n12927468.md#1">飞蚊症能治愈？2碗药膳 告别眼睛老化和飞蚊</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12929901.md#1">印度疫情何时到顶峰？七大问题一次看懂</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12923540.md#1">肾功能下降一半 可能没感觉！这些症状别轻忽</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12932504.md#1">美双胞胎姊妺申请大学 获2400万美元奖学金</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/9/n12934031.md#1">美军新兵持枪劫持校车 被学童的提问击败</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ezkcme3586/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ezkcme3586/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/10/n12936201.htm">BLM创始人十年前录像曝光 钟情毛语录</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/10/n12936201.htm">BLM创始人十年前录像曝光 钟情毛语录</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ezkcme3586/djy/blob/master/gb/21/5/10/n12936201.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ezkcme3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ezkcme3586/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ezkcme3586/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/5/10/n12936201.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
